[workspace]
members = ["lxc-sys"]

[package]
name = "lxc"
version = "0.6.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
repository = "https://github.com/sanpii/lxc-rs.git"
documentation = "https://docs.rs/lxc"
keywords = ["lxc"]
license = "MIT"
categories = ["api-bindings"]
description = "Linux Containers API"
edition = "2021"

[dependencies]
bitflags = "2.0"

[dependencies.lxc-sys]
version = "0.4"
path = "./lxc-sys"

[features]
v1_0 = []
v1_1 = ["v1_0"]
v2_0 = ["v1_1"]
v2_1 = ["v2_0"]
v3_0 = ["v2_1"]
v3_1 = ["v3_0"]
v3_2 = ["v3_1"]
v4_0 = ["v3_2"]
v4_0_5 = ["v4_0"]
