[workspace]
members = ["lxc-sys"]

[workspace.package]
edition = "2024"

[package]
name = "lxc"
version = "0.8.0"
authors = ["Sanpi <sanpi@homecomputing.fr>", "Andreas Pfeil <andreas.pfeil@tinysoft.studio>"]
repository = "https://github.com/sanpii/lxc-rs.git"
documentation = "https://docs.rs/lxc"
keywords = ["lxc"]
license = "MIT"
categories = ["api-bindings"]
description = "Linux Containers API"
edition.workspace = true

[dependencies]
bitflags = "2.0"

[dependencies.lxc-sys]
version = "0.5"
path = "./lxc-sys"

[features]
v1_0 = []
v1_1 = ["v1_0"]
v2_0 = ["v1_1"]
v2_1 = ["v2_0"]
v3_0 = ["v2_1"]
v3_1 = ["v3_0"]
v3_2 = ["v3_1"]
v4_0 = ["v3_2"]
v5_0 = ["v4_0"]
v6_0 = ["v5_0"]
