[package]
name = "lxc-sys"
version = "0.4.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
description = "FFI bindings to lxc API"
repository = "https://github.com/sanpii/lxc-rs.git"
documentation = "https://docs.rs/lxc-sys"
keywords = ["lxc"]
license = "MIT"
categories = ["external-ffi-bindings"]
edition = "2021"
links = "lxc"

[dependencies]
libc="0.2"

[build-dependencies]
bindgen = "0.61"
